# midi-monitor

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/midi/: device.rs  message.rs  mod.rs
ui/: main.slint
