[package]
name = "midi_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.22", features = ["default_fonts", "glow", "persistence"] }
egui = "0.22"
env_logger = "0.10"
log = "0.4"
midir = "0.9"
winapi = { version = "0.3", features = ["winuser", "windef"] }
