[package]
name = "midi_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24.1", features = ["default_fonts", "persistence"] }
egui = "0.24.1"
midir = "0.9"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "windef"]
